--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<parent>
 		<groupId>org.scijava</groupId>
 		<artifactId>pom-scijava</artifactId>
-		<version>36.0.0</version>
+		<version>37.0.0</version>
 		<relativePath />
 	</parent>
 
@@ -128,16 +128,10 @@
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-		<n5.version>3.0.2</n5.version>
-		<n5-ij.version>3.2.6</n5-ij.version>
-		<n5-hdf5.version>2.0.1</n5-hdf5.version>
-		<n5-aws-s3.version>4.0.1</n5-aws-s3.version>
-		<n5-google-cloud.version>4.0.0</n5-google-cloud.version>
-		<n5-imglib2.version>7.0.0</n5-imglib2.version>
-		<n5-universe.version>1.3.0</n5-universe.version>
-		<n5-viewer_fiji.version>5.3.1</n5-viewer_fiji.version>
 		<n5-zarr.version>1.0.1</n5-zarr.version>
-		<bigdataviewer-core.version>10.4.8</bigdataviewer-core.version>
+		<n5-universe.version>1.3.0</n5-universe.version>
+		<n5-ij.version>3.2.7-SNAPSHOT</n5-ij.version>
+		<n5-viewer_fiji.version>5.3.2-SNAPSHOT</n5-viewer_fiji.version>
 
 	</properties>
 
