--- a/pom.xml
+++ b/pom.xml
@@ -129,7 +129,7 @@
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
 		<n5-zarr.version>1.0.1</n5-zarr.version>
-		<n5-universe.version>1.3.0</n5-universe.version>
+		<n5-universe.version>1.3.1-SNAPSHOT</n5-universe.version>
 		<n5-ij.version>3.2.7-SNAPSHOT</n5-ij.version>
 		<n5-viewer_fiji.version>5.3.2-SNAPSHOT</n5-viewer_fiji.version>
 
