--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
 
 	<groupId>sc.fiji</groupId>
 	<artifactId>bigwarp_fiji</artifactId>
-	<version>9.0.1-SNAPSHOT</version>
+	<version>9.1.0-SNAPSHOT</version>
 
 	<name>BigWarp plugin for Fiji</name>
 	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
@@ -129,9 +129,9 @@
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
 		<n5-zarr.version>1.0.1</n5-zarr.version>
-		<n5-universe.version>1.3.1-SNAPSHOT</n5-universe.version>
-		<n5-ij.version>3.2.7-SNAPSHOT</n5-ij.version>
-		<n5-viewer_fiji.version>5.3.2-SNAPSHOT</n5-viewer_fiji.version>
+		<n5-universe.version>1.3.1</n5-universe.version>
+		<n5-ij.version>4.0.0</n5-ij.version>
+		<n5-viewer_fiji.version>6.0.0</n5-viewer_fiji.version>
 
 	</properties>
 
