--- a/pom.xml
+++ b/pom.xml
@@ -128,7 +128,9 @@
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-		<n5-zarr.version>1.0.1</n5-zarr.version>
+		<n5.version>3.1.1</n5.version>
+		<n5-blosc.version>1.1.1</n5-blosc.version>
+		<n5-zarr.version>1.2.0</n5-zarr.version>
 		<n5-universe.version>1.3.1</n5-universe.version>
 		<n5-ij.version>4.0.0</n5-ij.version>
 		<n5-viewer_fiji.version>6.0.0</n5-viewer_fiji.version>
