--- a/pom.xml
+++ b/pom.xml
@@ -128,12 +128,15 @@
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 
-		<n5.version>3.1.1</n5.version>
+		<n5.version>3.2.0</n5.version>
+		<n5-aws-s3.version>4.1.1</n5-aws-s3.version>
 		<n5-blosc.version>1.1.1</n5-blosc.version>
-		<n5-zarr.version>1.2.0</n5-zarr.version>
-		<n5-universe.version>1.3.1</n5-universe.version>
-		<n5-ij.version>4.0.0</n5-ij.version>
-		<n5-viewer_fiji.version>6.0.0</n5-viewer_fiji.version>
+		<n5-hdf5.version>2.2.0</n5-hdf5.version>
+		<n5-google-cloud.version>4.1.0</n5-google-cloud.version>
+		<n5-zarr.version>1.3.1</n5-zarr.version>
+		<n5-universe.version>1.4.1</n5-universe.version>
+		<n5-ij.version>4.1.0</n5-ij.version>
+		<n5-viewer_fiji.version>6.1.0</n5-viewer_fiji.version>
 
 	</properties>
 
@@ -264,7 +267,6 @@
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-universe</artifactId>
-			<version>${n5-universe.version}</version>
 		</dependency>
 		<!-- OME dependencies -->
 		<dependency>
