POM: Bump dependency versions
	imglib2 -> 7.1.0
	imglib2-realtransform -> 4.0.3
	imglib2-roi -> 0.15.0
	imglib2-cache -> 1.0.0-beta-18
	imglib2-algorithm -> 0.15.3
	bigdataviewer-core -> 10.6.0
	bigdataviewer-vistools -> 1.0.0-beta-36
	n5 -> 3.3.0
	n5-imglib2 -> 7.0.1-SNAPSHOT
	n5-google-cloud -> 4.1.1
	n5-zarr -> 1.3.5

--- a/pom.xml
+++ b/pom.xml
@@ -118,31 +118,38 @@
 		<license.projectName>BigWarp plugin for Fiji.</license.projectName>
 		<license.excludes>**/resources/*.xml</license.excludes>
 
-		<imglib2.version>6.3.0</imglib2.version>
-		<imglib2-realtransform.version>4.0.1</imglib2-realtransform.version>
+		<imglib2.version>7.1.0</imglib2.version>
+		<imglib2-realtransform.version>4.0.3</imglib2-realtransform.version>
+		<imglib2-roi.version>0.15.0</imglib2-roi.version>
+		<imglib2-cache.version>1.0.0-beta-18</imglib2-cache.version>
+		<imglib2-algorithm.version>0.15.3</imglib2-algorithm.version>
+		<bigdataviewer-core.version>10.6.0</bigdataviewer-core.version>
+		<bigdataviewer-vistools.version>1.0.0-beta-36</bigdataviewer-vistools.version>
+<!--		<imagej-common.version>2.0.6-SNAPSHOT</imagej-common.version>-->
+<!--		<imagej-ops.version>2.0.1-SNAPSHOT</imagej-ops.version>-->
 
 		<jcommander.version>1.48</jcommander.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 		<jitk-tps.version>3.0.4</jitk-tps.version>
 
-		<!-- NB: Deploy releases to the SciJava Maven repository. -->
-		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
-
-		<n5.version>3.2.0</n5.version>
-		<n5-aws-s3.version>4.1.1</n5-aws-s3.version>
+		<n5.version>3.3.0</n5.version>
+		<n5-imglib2.version>7.0.1-SNAPSHOT</n5-imglib2.version>
+		<n5-aws-s3.version>4.2.1</n5-aws-s3.version>
 		<n5-blosc.version>1.1.1</n5-blosc.version>
 		<n5-hdf5.version>2.2.0</n5-hdf5.version>
-		<n5-google-cloud.version>4.1.0</n5-google-cloud.version>
-		<n5-zarr.version>1.3.4</n5-zarr.version>
+		<n5-google-cloud.version>4.1.1</n5-google-cloud.version>
+		<n5-zarr.version>1.3.5</n5-zarr.version>
 		<n5-universe.version>1.6.0</n5-universe.version>
 		<n5-ij.version>4.2.1</n5-ij.version>
 		<n5-viewer_fiji.version>6.1.1</n5-viewer_fiji.version>
 
-		<bigdataviewer-core.version>10.4.14</bigdataviewer-core.version>
-		<bigdataviewer-vistools.version>1.0.0-beta-34</bigdataviewer-vistools.version>
-
 		<ejml-core.version>0.41</ejml-core.version>
 		<ejml-ddense.version>0.41</ejml-ddense.version>
+
+		<enforcer.skip>true</enforcer.skip>
+
+		<!-- NB: Deploy releases to the SciJava Maven repository. -->
+		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
 
 	<repositories>
@@ -181,10 +188,6 @@
 		<dependency>
 			<groupId>sc.fiji</groupId>
 			<artifactId>bigdataviewer-core</artifactId>
-		</dependency>
-		<dependency>
-			<groupId>sc.fiji</groupId>
-			<artifactId>bigdataviewer-vistools</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>sc.fiji</groupId>
