--- a/pom.xml
+++ b/pom.xml
@@ -134,8 +134,9 @@
 		<n5-imglib2.version>7.0.2</n5-imglib2.version>
 		<n5-aws-s3.version>4.2.1</n5-aws-s3.version>
 		<n5-google-cloud.version>4.1.1</n5-google-cloud.version>
+		<n5-ij.version>4.2.5</n5-ij.version>
 		<n5-universe.version>1.6.0</n5-universe.version>
-		<n5-ij.version>4.2.3</n5-ij.version>
+		<n5-viewer_fiji.version>6.1.2</n5-viewer_fiji.version>
 
 		<ejml-core.version>0.41</ejml-core.version>
 		<ejml-ddense.version>0.41</ejml-ddense.version>
