--- a/pom.xml
+++ b/pom.xml
@@ -121,6 +121,17 @@
 		<jcommander.version>1.48</jcommander.version>
 		<alphanumeric-comparator.version>1.4.1</alphanumeric-comparator.version>
 
+		<n5.version>4.0.0-SNAPSHOT</n5.version>
+		<n5-ij.version>4.4.0</n5-ij.version>
+		<n5-zarr.version>2.0.0-SNAPSHOT</n5-zarr.version>
+		<n5-universe.version>2.3.1-SNAPSHOT</n5-universe.version>
+		<n5-viewer_fiji.version>6.1.3-SNAPSHOT</n5-viewer_fiji.version>
+		<n5-zstandard.version>1.0.3-SNAPSHOT</n5-zstandard.version>
+
+		<imglib2-algorithm.version>0.18.0</imglib2-algorithm.version>
+
+		<enforcer.skip>true</enforcer.skip>
+
 		<!-- NB: Deploy releases to the SciJava Maven repository. -->
 		<releaseProfiles>sign,deploy-to-scijava</releaseProfiles>
 	</properties>
@@ -155,6 +166,10 @@
 		<dependency>
 			<groupId>net.imglib2</groupId>
 			<artifactId>imglib2-realtransform</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>net.imglib2</groupId>
+			<artifactId>imglib2-algorithm</artifactId>
 		</dependency>
 
 		<!-- BigDataViewer dependencies -->
@@ -213,6 +228,10 @@
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
 			<artifactId>n5-blosc</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>org.janelia</groupId>
+			<artifactId>n5-zstandard</artifactId>
 		</dependency>
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
