--- a/pom.xml
+++ b/pom.xml
@@ -126,7 +126,6 @@
 		<n5-zarr.version>2.0.0-SNAPSHOT</n5-zarr.version>
 		<n5-universe.version>2.3.1-SNAPSHOT</n5-universe.version>
 		<n5-viewer_fiji.version>6.1.3-SNAPSHOT</n5-viewer_fiji.version>
-		<n5-zstandard.version>1.0.3-SNAPSHOT</n5-zstandard.version>
 
 		<imglib2-algorithm.version>0.18.0</imglib2-algorithm.version>
 
@@ -232,6 +231,7 @@
 		<dependency>
 			<groupId>org.janelia</groupId>
 			<artifactId>n5-zstandard</artifactId>
+			<version>1.0.3-SNAPSHOT</version>
 		</dependency>
 		<dependency>
 			<groupId>org.janelia.saalfeldlab</groupId>
