--- a/pom.xml
+++ b/pom.xml
@@ -15,7 +15,7 @@
 
 	<name>BigWarp plugin for Fiji</name>
 	<description>A tool for manual pointwise deformable registration using bigdataviewer.</description>
-	<url>https://imagej.net/BigWarp</url>
+	<url>https://imagej.net/plugins/bigwarp</url>
 	<inceptionYear>2015</inceptionYear>
 	<organization>
 		<name>Fiji</name>
@@ -33,7 +33,7 @@
 		<developer>
 			<id>bogovicj</id>
 			<name>John Bogovic</name>
-			<url>https://imagej.net/User:Bogovic</url>
+			<url>https://imagej.net/people/bogovicj</url>
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
@@ -47,7 +47,7 @@
 		<developer>
 			<id>axtimwalde</id>
 			<name>Stephan Saalfeld</name>
-			<url>https://imagej.net/User:Saalfeld</url>
+			<url>https://imagej.net/people/axtimwalde</url>
 			<roles>
 				<role>founder</role>
 				<role>lead</role>
@@ -62,28 +62,28 @@
 	<contributors>
 		<contributor>
 			<name>Curtis Rueden</name>
-			<url>https://imagej.net/User:Rueden</url>
+			<url>https://imagej.net/people/ctrueden</url>
 			<properties>
 				<id>ctrueden</id>
 			</properties>
 		</contributor>
 		<contributor>
 			<name>Mark Hiner</name>
-			<url>https://imagej.net/User:Hinerm</url>
+			<url>https://imagej.net/people/hinerm</url>
 			<properties>
 				<id>hinerm</id>
 			</properties>
 		</contributor>
 		<contributor>
 			<name>Philipp Hanslovsky</name>
-			<url>https://imagej.net/User:Hanslovsky</url>
+			<url>https://imagej.net/people/hanslovsky</url>
 			<properties>
 				<id>hanslovsky</id>
 			</properties>
 		</contributor>
 		<contributor>
 			<name>Christian Tischer</name>
-			<url>https://imagej.net/User:EMBL-CBA</url>
+			<url>https://imagej.net/people/tischi</url>
 			<properties>
 				<id>tischi</id>
 			</properties>
