--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,6 +1,11 @@
-name: build PR
+name: build
 
 on:
+  push:
+    branches:
+      - master
+    tags:
+      - "*-[0-9]+.*"
   pull_request:
     branches:
       - master
@@ -25,3 +30,11 @@ jobs:
         run: .github/setup.sh
       - name: Execute the build
         run: .github/build.sh
+        env:
+          GPG_KEY_NAME: ${{ secrets.GPG_KEY_NAME }}
+          GPG_PASSPHRASE: ${{ secrets.GPG_PASSPHRASE }}
+          MAVEN_USER: ${{ secrets.MAVEN_USER }}
+          MAVEN_PASS: ${{ secrets.MAVEN_PASS }}
+          CENTRAL_USER: ${{ secrets.CENTRAL_USER }}
+          CENTRAL_PASS: ${{ secrets.CENTRAL_PASS }}
+          SIGNING_ASC: ${{ secrets.SIGNING_ASC }}
